fixing minor z-index issue with repeater-list headings

--- a/less/repeater-list.less
+++ b/less/repeater-list.less
@@ -134,6 +134,7 @@
 		padding: 8px;
 		position: absolute;
 		top: 0;
+		z-index: 1;
 
 		&.shifted {
 			margin-left: -1px;
